Colab を使用して作成されました

--- a/notebooks/1-Data_Preprocessing_Week1_COLAB.ipynb
+++ b/notebooks/1-Data_Preprocessing_Week1_COLAB.ipynb
@@ -3113,21 +3113,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 103,
       "id": "7e0e53eb",
       "metadata": {
         "id": "7e0e53eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "be2f3743-5c94-438a-d061-62f3efcb53d1"
+        "outputId": "5ba9fcf3-1e9e-4fcc-fa1e-927ab6b7ed71"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\u001b[32m2024-12-16 13:22:31.938\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mpreprocessing\u001b[0m:\u001b[36msave_as_parquet\u001b[0m:\u001b[36m40\u001b[0m - \u001b[1mDataFrame saved as parquet file here: ./impact-colab-data/huberman-minilmL6-256.parquet\u001b[0m\n"
+            "\u001b[32m2024-12-16 13:25:31.606\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mpreprocessing\u001b[0m:\u001b[36msave_as_parquet\u001b[0m:\u001b[36m40\u001b[0m - \u001b[1mDataFrame saved as parquet file here: ./impact-colab-huberman-minilmL6-256.parquet\u001b[0m\n"
           ]
         }
       ],
@@ -3136,7 +3136,7 @@
         "io = FileIO()\n",
         "\n",
         "#Define your output path\n",
-        "outpath = \"./impact-colab-data/huberman-minilmL6-256.parquet\"\n",
+        "outpath = \"./impact-colab-huberman-minilmL6-256.parquet\"\n",
         "\n",
         "#save to disk\n",
         "io.save_as_parquet(file_path=outpath, data=docs, overwrite=False)"
@@ -3144,7 +3144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 104,
       "id": "12f4d9b4",
       "metadata": {
         "id": "12f4d9b4",
@@ -3152,7 +3152,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "018f3bab-b668-4f1b-da22-6173447c48c5"
+        "outputId": "09322b0d-ac55-4fc7-9545-672d29b343d0"
       },
       "outputs": [
         {
@@ -4101,6 +4101,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
